<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.teammembers.TeamMembersActivity">

  <LinearLayout
      android:id="@+id/teamNameContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:orientation="horizontal"
      android:padding="@dimen/padding_standard"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/teamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/team_hint"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:text="@string/default_team_name" />

    <Button
        android:id="@+id/showMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/team_button" />

  </LinearLayout>

  <FrameLayout
      android:id="@+id/frameLayout"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/teamNameContainer">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamMembersList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/teamNameContainer"
        android:scrollbars="vertical"
        android:visibility="invisible"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/noMembersAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_team_avaliable"
        android:visibility="invisible"
        tools:visibility="visible" />

  </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
